[package]
name = "annotate_reads"
version = "0.1.0"
authors = ["Matt Sooknah <matt.sooknah@10xgenomics.com>"]

[dependencies]
itertools = "0.4"
docopt = "^1.0.0"
serde = { version = "1", features = ["derive"] }
time = "*"
log = "*"
num = "*"
rand = "0.5"
csv = "1.0"
histogram = "*"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "*"
flate2 = "*"
bitflags = "1"
bio = ">=0.22"
lz4 = "1.23.1"
failure = "*"
rust-htslib = "^0.26.0"
regex = ">=1.3.4"
