[package]
name = "annotate_reads"
version = "0.1.0"
authors = ["Matt Sooknah <matt.sooknah@10xgenomics.com>"]

[dependencies]
itertools = "0.4"
docopt = "^1.0.0"
serde = { version = "1", features = ["derive"] }
time = "*"
log = "*"
num = "0.2.1"
rand = "0.5"
csv = "^1.0"
histogram = "*"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "*"
bio = ">=0.22"
lz4 = "1.8.1"
rust-htslib = { version = "0.22.0", default-features = false, features = ["serde"] }
#rust-htslib = { git = "https://github.com/10xGenomics/rust-htslib", branch = "paul/set-qname" }
flate2 = ">=0.2.18"
url = "1.7.2"

[profile.release]
#debug = true
