[package]
name = "chunk_reads"
version = "0.1.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]

[dependencies]
memchr = ">=0.1"
lz4 = ">=1.20"
flate2 = { version = ">=0.2.18", features = ["edition"], default-features = true}
#fastq = { git = "https://github.com/pmarks/fastq-rs.git", branch = "master" }
fastq = { git = "https://github.com/pryvkin10x/fastq-rs.git", branch = "master" }
#fastq = { git = "https://github.com/aseyboldt/fastq-rs.git", branch = "master" }
#fastq = { git = "https://github.com/TomKellyGenetics/fastq-rs.git", branch = "dev" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
docopt = "*"
rayon = "1.0"
error-chain = "*"
tempdir = "*"
#lz4 = "1.23" #{git = "https://github.com/bozaro/lz4-rs"}
#flate2 = { version = ">=0.2.18", features = ["zlib"], default-features = false }
#flate2 = {git = "https://github.com/alexcrichton/flate2-rs"}
failure = "*"
#flate2 = { version = ">=1.0.13", features = ["zlib"], default-features = false}
