[package]
name = "chunk_reads"
version = "0.1.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]

[dependencies]
memchr = ">=0.1"
lz4 = "1.8.1"
flate2 = ">=0.2.18"
fastq = { git = "https://github.com/pryvkin10x/fastq-rs.git", rev = "4a66d79"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
docopt = "*"
rayon = "1.0"
error-chain = "*"
tempdir = "*"
failure = "*"
