[package]
name = "chunk_reads"
version = "0.1.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]

[dependencies]
memchr = ">=0.1"
cc = "1.0.50"
getopts = "0.2.16"
fastq = { git = "https://github.com/pryvkin10x/fastq-rs.git", branch = "master" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
docopt = "*"
rayon = "0.8"
error-chain = "*"
tempdir = "*"
lz4 = "1.8.1"
flate2 = ">=0.2.18"

[dev-dependencies]
fastq_10x = { path = "external/rust-fastq-10x" }
