[package]
name = "cr_stage"
version = "0.1.0"
authors = ["Paul Ryvkin <paul.ryvkin@10xgenomics.com>"]


[dependencies]
itertools = "0.7"
docopt = "*"
time = "*"
log = "*"
env_logger = "*"
num = "*"
rand = "^0.5"
chrono = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "^1.0"
bincode = "*"
byteorder = "*"
flate2 = "*"
martian = { git = "https://github.com/martian-lang/martian-rust", rev = "59ab488b2370edf2c7c552fb4c48fc272a1abe6b" }
tenkit = { path = "../rust-utils-10x/tenkit" }
bitflags = "^1.0.0"
failure = "*"
rust-htslib = { version = "0.24.0" }
