[package]
name = "detect_chemistry"
version = "0.1.0"
authors = ["Paul Ryvkin <paul.ryvkin@10xgenomics.com>"]

[dependencies]
docopt = "^1.0.0"
serde = { version = "1", features = ["derive"] }
memchr = "2.3.2"
#regex = ">=1.3.4" #{ git = "https://github.com/rust-lang/regex.git" }
regex = { git = "https://github.com/TomKellyGenetics/regex.git" }
lazy_static = "*"
bio = "*"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git" }
fnv = "*"
itertools = "*"
bincode = "*"
serde_json = "*"
pdqsort = "*"
log = "*"
env_logger = "*"
chrono = "*"
rand = "0.5"
flate2 = "*"

[dependencies.boomphf]
git = "https://github.com/10XGenomics/rust-boomphf"
features = ["serde"]
