[package]
name = "vdj_asm"
version = "0.1.0"
authors = ["Sofia <sofia@10xtechnologies.com>"]

[dependencies]
flate2 = "*"
itertools = "^0.7"
docopt = "^1.0.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
time = "*"
num = "*"
libc = "*"
bio = "*"
rand = "0.5"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git", rev = "2e16852" }
lazy_static = "*"
lz4 = "1.8.1"
fxhash = "*"
failure = "*"
rust-htslib = { version = "0.24.0", default-features = false, features = ["serde"] }
