[package]
name = "tenkit"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]

[dependencies]
bincode = "*"
byteorder = "*"
itertools = "*"
regex = ">=1.3.4"
serde = "*"
serde_derive = "*"
log = "*"
fxhash = "*"
num = "*"
libc = "*"
#rust-htslib = { version = "0.26", default-features = false, features = ["serde"] }
rust-htslib = "0.21.0"

[dev-dependencies]
env_logger = "*"
rand = "*"
