[package]
name = "tenkit"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]

[dependencies]
bincode = "*"
byteorder = "*"
itertools = "*"
regex = ">=1.3.4"
serde = { version = ">=1.0", features=["derive"] }
derive = "*"
serde_derive = "1"
log = "*"
fxhash = "*"
num = "*"
libc = "*"
#rust-htslib = { git = "https://github.com/TomKellyGenetics/rust-htslib", rev = "5c9a74a22c6db99a8abbbc277e97cc3807c6b199", features = ["serde"] }
#rust-htslib = { git = "https://github.com/TomKellyGenetics/rust-htslib", rev = "05e0ee318ca7dd20938f57d7b0ae7b2df0a7c05f", features = ["serde"] }
#rust-htslib = { version = "0.26", default-features = false, features = ["serde"] }
#rust-htslib = "0.21.0"
rust-htslib = { version = "0.24.0", default-features = false, features = ["serde"] }
#bam = "0.0.8"

[dev-dependencies]
env_logger = "*"
rand = "*"
