[package]
name = "tenkit"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]

[dependencies]
bincode = "*"
byteorder = "*"
itertools = "*"
regex = ">=1.3.4"
serde = { version = ">=1.0", features=["derive"] }
derive = "*"
serde_derive = "1"
log = "*"
fxhash = "*"
num = "*"
libc = "*"
rust-htslib = { version = "0.24.0", default-features = false, features = ["serde"] }

[dev-dependencies]
env_logger = "*"
rand = "*"
